            Fix Graphics.createImage if the last character is a newline
            Graphics: Fix issue if drawImage given a non-image
            Added optional Unicode support (Linux/Bangle.js only currently)
            Added optional PBF font loading support (Linux/Bangle.js only currently)

     2v18 : Fix drawString with setClipRect with 90/270-degree rotation (fix #2343)
            Pico/Wifi: Enabled JIT compiler
            Ensure that if JIT fails, we correctly remove just the "jit" tag and treat the function as normal JS
            nRF52: Add NRF.setAdvertising({},{whenConnected:true}) to allow advertisements to be sent while a connection is active
            nRF52: Fix NRF.getSecurityStatus's 'advertising' field (only appeared when connected previously)
            Fix 'ghosting' issue on Welcome screen (forcing timeout/lcdPower/etc at boot could disable the EXTCOMIN toggle)
            nRF52: OneWire accesses are now scheduled with the Timeslot API to avoid the softdevice interfering (fix #1831)
            nRF52: Add NRF.on('bond'/'advertising') events to keep track of BLE status more easily
            Pixl.js: Switch to slower ROM-saving sin/cos/atan/atan2 (running out of free space after JIT enabled)
            Graphics: Ensure fillPoly clips out of range (+/-2048) coordinates
            nRF52: Fix regression after whenConnected:true addition. NRF.wake() will now not start advertising when connected unless whenConnected:true is set.
            STM32: neopixel: Fix small glitches in the output pin just before writes that could throw off APA10x LEDs
            Bangle.js2: Ensure that changing a menu item when half-scrolled off screen doesn't overwrite widgets
            Puck.js: Ensure acc/gyro doesn't cause watch events to be added to the input queue (more efficient)
            Waveform: Fix waveform input/output when not done at system start - Since 2v13 start time was set in the past