@@ -48,6 +48,14 @@
 	}
 })();
 
+(() => {
+  switch ("continue") {
+    case "continue": print("Correct");break;
+    default: throw Error("Not correct");
+  }
+})();
+
+
 /* if there was a problem earlier, an error
 should have occurred and we won't get here */
 result = 1;
